--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,36 @@
             <ul class="nav navbar-nav navbar-right">
                 <li><%= link_to "Home", root_path %></li>
                 <li><%= link_to "Help", help_path %></li>
-                <li><%= link_to "Log in", login_path %></li>
+                <% if logged_in? %>
+                    <li><%= link_to "Users", users_path %></li>
+                    
+                    <li class="dropdown show">
+                        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Dropdown link
+                        </a>
+
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                    </li>
+
+                    <!--
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            Account <b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><%= link_to "Profile", current_user %></li>
+                            <li><%= link_to "Settings", '#' %></li>
+                            <li class="divider"></li>
+                            <li><%= link_to "Log out", logout_path, method: :delete %></li>
+                        </ul>
+                    </li>-->
+                <% else %>
+                    <li><%= link_to "Log in", login_path %></li>
+                <% end %>
             </ul>
         </nav>
     </div>
