--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,19 +8,6 @@
                 <% if logged_in? %>
                     <li><%= link_to "Users", users_path %></li>
                     
-                    <li class="dropdown show">
-                        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Dropdown link
-                        </a>
-
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-                    </li>
-
-                    <!--
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             Account <b class="caret"></b>
@@ -29,9 +16,12 @@
                             <li><%= link_to "Profile", current_user %></li>
                             <li><%= link_to "Settings", '#' %></li>
                             <li class="divider"></li>
-                            <li><%= link_to "Log out", logout_path, method: :delete %></li>
+                            <li>
+                                <%= link_to "Log out", logout_path, method: :delete %>
+                            </li>
                         </ul>
-                    </li>-->
+                    </li>
+
                 <% else %>
                     <li><%= link_to "Log in", login_path %></li>
                 <% end %>
@@ -39,3 +29,7 @@
         </nav>
     </div>
 </header>
+
+
+
+
